// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`base.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification t-is-info"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          标题名称
        </span>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`close-all.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          点击打开多个消息
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          点击关闭多个消息
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`content.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-notification t-is-info"
      >
        <div
          class="t-notification__icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-info"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notification__main"
        >
          <div
            class="t-notification__title__wrap"
          >
            <span
              class="t-notification__title"
            >
              自定义内容（字符串）
            </span>
          </div>
          <div
            class="t-notification__content"
          >
            这是一条消息通知
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-notification t-is-info"
      >
        <div
          class="t-notification__icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-info"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notification__main"
        >
          <div
            class="t-notification__title__wrap"
          >
            <span
              class="t-notification__title"
            >
              自定义内容
            </span>
          </div>
          <div>
            这是一条消息通知
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`footer.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-notification t-is-info"
  >
    <div
      class="t-notification__icon"
    >
      <svg
        class="t-icon t-icon-info-circle-filled t-is-info"
        fill="none"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
          fill="currentColor"
          fill-opacity="0.9"
        />
      </svg>
    </div>
    <div
      class="t-notification__main"
    >
      <div
        class="t-notification__title__wrap"
      >
        <span
          class="t-notification__title"
        >
          自定义底部详情
        </span>
      </div>
      <div
        class="t-notification__content"
      >
        这是一条消息通知
      </div>
      <div
        class="t-notification__detail"
      >
        <div
          class="t-notification__detail"
        >
          <span
            class="t-notification__detail-item"
          >
            重启
          </span>
          <span
            class="t-notification__detail-item t-is-active"
          >
            查看详情
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`icon.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-notification t-is-info"
      >
        <div
          class="t-notification__icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-info"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notification__main"
        >
          <div
            class="t-notification__title__wrap"
          >
            <span
              class="t-notification__title"
            >
              普通通知
            </span>
          </div>
          <div
            class="t-notification__content"
          >
            这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-notification t-is-error"
      >
        <div
          class="t-notification__icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-error"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notification__main"
        >
          <div
            class="t-notification__title__wrap"
          >
            <span
              class="t-notification__title"
            >
              危险通知
            </span>
          </div>
          <div
            class="t-notification__content"
          >
            这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-notification t-is-warning"
      >
        <div
          class="t-notification__icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-warning"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notification__main"
        >
          <div
            class="t-notification__title__wrap"
          >
            <span
              class="t-notification__title"
            >
              告警通知
            </span>
          </div>
          <div
            class="t-notification__content"
          >
            这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-notification t-is-success"
      >
        <div
          class="t-notification__icon"
        >
          <svg
            class="t-icon t-icon-check-circle-filled t-is-success"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM4.5 8.2l.7-.7L7 9.3l3.8-3.8.7.7L7 10.7 4.5 8.2z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notification__main"
        >
          <div
            class="t-notification__title__wrap"
          >
            <span
              class="t-notification__title"
            >
              成功通知
            </span>
          </div>
          <div
            class="t-notification__content"
          >
            这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知这是一条消息通知
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`operation.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-notification t-is-info"
      >
        <div
          class="t-notification__icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-info"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notification__main"
        >
          <div
            class="t-notification__title__wrap"
          >
            <span
              class="t-notification__title"
            >
              超出的文本省略号显示
            </span>
          </div>
          <div
            class="t-notification__content"
          >
            文案不限长度，但是展示最大显示三行折行的末尾显示折行末尾显示折行末尾显示折行末尾显示折行末尾显示折行折行末尾显示折行折行末尾显示折行末尾显示折行折行末尾
          </div>
          <div
            class="t-notification__detail"
          >
            <div>
              <button
                class="t-button t-button--theme-primary t-button--variant-text"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  查看详情
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-notification t-is-info"
      >
        <div
          class="t-notification__icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-info"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notification__main"
        >
          <div
            class="t-notification__title__wrap"
          >
            <span
              class="t-notification__title"
            >
              自定义底部
            </span>
          </div>
          <div
            class="t-notification__content"
          >
            使用 props function 自定义底部内容
          </div>
          <div
            class="t-notification__detail"
          >
            <div>
              <button
                class="t-button t-button--theme-primary t-button--variant-text"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  查看详情
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-notification t-is-info"
      >
        <div
          class="t-notification__icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-info"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notification__main"
        >
          <div
            class="t-notification__title__wrap"
          >
            <span
              class="t-notification__title"
            >
              <div>
                自定义标题 
                <small>
                  我是副标题
                </small>
              </div>
            </span>
          </div>
          <div
            class="t-notification__content"
          >
            1. 使用 props function 自定义标题；2. 使用插槽自定义底部内容
          </div>
          <div
            class="t-notification__detail"
          >
            <div
              slot="footer"
            >
              <button
                class="t-button t-button--theme-default t-button--variant-text"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  知道了
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-notification t-is-info"
      >
        <div
          class="t-notification__icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-info"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notification__main"
        >
          <div
            class="t-notification__title__wrap"
          >
            <span
              class="t-notification__title"
            >
              <div>
                自定义标题 
                <small>
                  我是副标题
                </small>
              </div>
            </span>
          </div>
          <div
            class="t-notification__content"
          >
            1. 使用插槽自定义标题 2. 使用插槽自定义底部内容
          </div>
          <div
            class="t-notification__detail"
          >
            <div>
              <button
                class="t-button t-button--theme-default t-button--variant-text"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  重启
                </span>
              </button>
              <button
                class="t-button t-button--theme-primary t-button--variant-text"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  稍后提醒我(10s)
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-notification t-is-info"
      >
        <div
          class="t-notification__icon"
        >
          <svg
            class="t-icon t-icon-info-circle-filled t-is-info"
            fill="none"
            height="1em"
            viewBox="0 0 16 16"
            width="1em"
          >
            <path
              d="M8 15A7 7 0 108 1a7 7 0 000 14zM7.4 4h1.2v1.2H7.4V4zm.1 2.5h1V12h-1V6.5z"
              fill="currentColor"
              fill-opacity="0.9"
            />
          </svg>
        </div>
        <div
          class="t-notification__main"
        >
          <div
            class="t-notification__title__wrap"
          >
            <span
              class="t-notification__title"
            >
              自定义内容
            </span>
          </div>
          <div
            class="t-notification__content"
          >
            使用插槽自定义内容
          </div>
          <div
            class="t-notification__detail"
          >
            <div>
              <button
                class="t-button t-button--theme-default t-button--variant-text"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  重启
                </span>
              </button>
              <button
                class="t-button t-button--theme-primary t-button--variant-text"
                type="button"
              >
                <span
                  class="t-button__text"
                >
                  更多
                </span>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`placement.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-vertical"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <div
            class="t-input__wrap"
            style="width: 130px; display: inline-block; margin: 0px 20px 36px 0px;"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-default"
            >
              <input
                class="t-input__inner"
                placeholder="请输入横向偏移量"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          class="t-space-item"
        >
          <div
            class="t-input__wrap"
            style="width: 130px; display: inline-block; margin: 0px 20px 36px 0px;"
            value=""
          >
            <div
              class="t-input t-size-m t-align-left t-is-default"
            >
              <input
                class="t-input__inner"
                placeholder="请输入纵向偏移量"
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              左上角
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              右上角
            </span>
          </button>
        </div>
      </div>
    </div>
    <div
      class="t-space-item"
    >
      <div
        class="t-space t-space-horizontal"
        style="gap: 16px;"
      >
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              左下角
            </span>
          </button>
        </div>
        <div
          class="t-space-item"
        >
          <button
            class="t-button t-button--theme-primary t-button--variant-base"
            type="button"
          >
            <span
              class="t-button__text"
            >
              右下角
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`plugin.jsx 1`] = `
<DocumentFragment>
  <div
    class="t-space t-space-horizontal"
    style="gap: 16px;"
  >
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          信息
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          成功
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          警告
        </span>
      </button>
    </div>
    <div
      class="t-space-item"
    >
      <button
        class="t-button t-button--theme-primary t-button--variant-base"
        type="button"
      >
        <span
          class="t-button__text"
        >
          错误
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`toggle.jsx 1`] = `
<DocumentFragment>
  <button
    class="t-button t-button--theme-primary t-button--variant-base"
    type="button"
  >
    <span
      class="t-button__text"
    >
      自由控制关闭时机
    </span>
  </button>
</DocumentFragment>
`;
